<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/current_ap_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/text_right_margin"
        android:layout_marginLeft="@dimen/text_left_margin"
        android:layout_marginRight="@dimen/text_right_margin"
        android:layout_marginStart="@dimen/text_left_margin"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/current_ap_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:hint="@string/current_ap"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:text=""
            android:textSize="32sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/target_ap_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_ap_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/text_right_margin"
        android:layout_marginLeft="@dimen/text_left_margin"
        android:layout_marginRight="@dimen/text_right_margin"
        android:layout_marginStart="@dimen/text_left_margin">

        <EditText
            android:id="@+id/target_ap_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:hint="@string/target_ap"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:text=""
            android:textSize="32sp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/multi_cf_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/target_ap_input_layout"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="25dp"
        android:text="@string/multi_cf"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/multi_cf_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/multi_cf_label"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:onClick="pick_number"
        android:text="@string/zero"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/cf_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/multi_cf_label"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/control_field"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/cf_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/cf_label"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:onClick="pick_number"
        android:text="@string/zero"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/capture_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cf_label"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/capture"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/capture_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/capture_label"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:onClick="pick_number"
        android:text="@string/zero"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/complete_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/capture_label"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/complete"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/complete_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/complete_label"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:onClick="pick_number"
        android:text="@string/zero"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/link_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/complete_label"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/link"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/link_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/link_lable"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:onClick="pick_number"
        android:text="@string/zero"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/deploy_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/link_lable"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/deploy"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/deploy_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/deploy_label"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:onClick="pick_number"
        android:text="@string/zero"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/hack_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deploy_label"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/hack"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/hack_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/hack_label"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:onClick="pick_number"
        android:text="@string/zero"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/upgrade_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hack_label"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/upgrade"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/upgrade_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/upgrade_label"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:onClick="pick_number"
        android:text="@string/zero"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/recharge_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upgrade_label"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/recharge"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/recharge_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/recharge_label"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:onClick="pick_number"
        android:text="@string/zero"
        android:textSize="20sp" />

</RelativeLayout>
